Use png in logo-credits to fix IE layout issue

--- a/ecolex/static/css/bootstrap.custom.css
+++ b/ecolex/static/css/bootstrap.custom.css
@@ -6929,7 +6929,7 @@ ul.select2-selection__rendered {
   display: block;
   height: 64px;
   width: 64px;
-  background: url('../img/logo-credits.svg') no-repeat top left;
+  background: url('../img/logo-credits.png') no-repeat top left;
   background-size: cover;
 }
 .sprite-iucn {
